app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require bootstrap_and_overrides
 *= require chosen
 *= require_tree .
 * require jquery.ui.datepicker
 */

.notification-indicator {
    float: left;
    margin: 7px 10px 0 0;
    width: 24px;
    height: 24px;
    border: 1px solid #DDD;
    border-radius: 3px;
    background: #F1F1F1;
    background: -moz-linear-gradient(#F1F1F1, #E0E0E0);
    background: -webkit-linear-gradient(#F1F1F1, #E0E0E0);
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f1f1f1', endColorstr='#e0e0e0')";
    box-shadow: 0 1px 0 #FAFAFA, inset 0 1px 0 #FAFAFA;
}

.notification-indicator > .mail-status {
    display: block;
    position: relative;
    top: 8px;
    left: 8px;
    width: 8px;
    height: 8px;
    border-radius: 100px;
    background: #AAA;
}

.notification-indicator > .mail-status.unread {
    background: rgb(255, 89, 89);
}

.navbar-link-to-profile {
    line-height: 20px;
}

.navbar-link-to-profile img {
    height: 20px;
    width: 20px;
    margin: 0 5px 0 0;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -o-border-radius: 3px;
    -ms-border-radius: 3px;
    -khtml-border-radius: 3px;
}

.navbar-link-to-profile span {
    font-weight: bold;
}

.best_in_place {
    padding: 0.1em;
    cursor: hand;
    cursor: pointer;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    -o-border-radius: 5px;
    -ms-border-radius: 5px;
    -khtml-border-radius: 5px;
    border-radius: 5px;
}

.best_in_place:hover, .do_hover {
    padding-right: 1.5em;
    background: #CCC url('/assets/red_pen.png') no-repeat right;
}

.purr {
    position: fixed;
    width: 250px;
    top: 60px;
    right: 50px;
    padding: 15px;
    background-color: #FCC;
    color: #000;
    border: 2px solid #C66;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    -o-border-radius: 10px;
    -ms-border-radius: 10px;
    -khtml-border-radius: 10px;
    border-radius: 10px;
}

.delete-link :hover {
    text-decoration: none;
}

select.year {
    width: 70px;
}

a.app-admin-icon, a.app-admin-icon:hover {
    font-size: 18px;
    text-decoration: none;
    color: gray;
    line-height: 38px;
    margin-left: 10px;
}

.error {
    color: red;
}

